js/js.translator/testData/incremental/invalidation/inlineFunctionAsParam/lib1/l1.0.kt
inline fun foo1() = "foo1"
inline fun foo2() = "foo2"
inline fun foo3() = "foo3"
